##########################################################################

cmake_minimum_required(VERSION 2.8)

##########################################################################

add_library(stl INTERFACE)
target_include_directories(stl INTERFACE include)

##########################################################################
